<resources>
    <string name="app_name">EduConnect - Educational App</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_email">Sign in with Email</string>
    <string name="sign_in_otp">Sign in with OTP</string>
    <string name="sign_in_gmail">Sign in with Gmail</string>
    <string name="login_with_firebase">Login with Firebase</string>
    <string name="msg_success_login">Signed in successfully</string>
    <string name="msg_failed_login">Sign in failed</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="msg_invalid_phone_number">Please enter a valid phone number.</string>
    <string name="msg_enter_otp">Please enter OTP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="choose_image">Choose image</string>
    <string name="save_to_firestore">Save to firestore</string>
    <string name="show_firestore_list">Show Firestore List</string>
    <string name="msg_upload_image">Please Upload an Image</string>
    <string name="msg_enter_title_name">Please enter Title Name</string>
    <string name="msg_enter_description">Please enter Description</string>
    <string name="select_picture">Select Picture</string>
    <string name="msg_firestore_success">Your data has been added to Firebase FireStore</string>
    <string name="type_a_message">Type a message</string>
    <string name="enter_the_msg">please enter the message</string>
    <string name="title_email_authentication">Email Authentication</string>
    <string name="title_gmail">Gmail</string>
    <string name="msg_enter_the_otp">please enter the OTP</string>
    <string name="msg_enter_valid_phone_number">Please enter a valid phone number.</string>
    <string name="title_otp">OTP</string>
    <string name="msg_no_users_found">No users found.</string>
    <string name="msg_no_data_found">No data found</string>
    <string name="msg_fail_to_get_firestore_data">Failed to get FireStore data</string>
    <string name="msg_uploading">Uploading...</string>
</resources>